# plinth

./: LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: Pedestal-complete-guide.md  developer-guide.md  plinth-complete-guide.md
src/pedestal/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  injector.py  logger.py  packages.py  state.py  templates.py
src/pedestal/commands/: __init__.py  add.py  doctor.py  init.py  list.py  remove.py
src/pedestal/templates/base/: .env.example  .gitignore  pyproject.toml.j2
src/pedestal/templates/base/src/: __init__.py  config.py.j2  main.py.j2
src/pedestal/templates/base/src/api/v1/: auth_jwt.py.j2  health.py
src/pedestal/templates/base/src/core/: auth.py.j2  database.py.j2  registry.py
src/plinth/: __init__.py  cli.py  config.py  logger.py  packages.py  templates.py
src/plinth/commands/: add.py  doctor.py
src/plinth/templates/base/: README.md.j2
tests/: __init__.py  test_config.py  test_exceptions.py  test_state.py
