[project]
name = "pedestal"
version = "1.0.0"
description = "Scaffold FastAPI projects in seconds, add features as you grow"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Silas Okanlawon", email = "okanlawonsilas@gmail.com"},
]
keywords = [
    "fastapi",
    "cli",
    "scaffolding",
    "generator",
    "web",
    "api",
    "framework",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "typer[all]>=0.12.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "libcst>=1.0.0",
    "rich>=13.0.0",
    "toml>=0.10.2",
]

[project.urls]
Homepage = "https://github.com/cybertycoon/pedestal"
Documentation = "https://github.com/cybertycoon/pedestal/blob/main/docs"
Repository = "https://github.com/cybertycoon/pedestal.git"
Issues = "https://github.com/cybertycoon/pedestal/issues"
Changelog = "https://github.com/cybertycoon/pedestal/blob/main/CHANGELOG.md"

[project.scripts]
pedestal = "pedestal.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pedestal"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
